# nostalgia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/geometries/: webgpu.txt
resources/shaders/: shader.wgsl
resources/tilemaps/: map.tmj
src/: nostalgia.cpp
src/engine/: engine.cpp  engine.h
src/files/: geometry_loader.cpp  geometry_loader.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h  tilemap_loader.cpp  tilemap_loader.h
web/: index.html
web/shader/: shader.wgsl  sprite.wgsl  tilemap.wgsl
web/src/: renderer.js
